feat: spotless apply