@@ -1,6 +1,19 @@
 package io.kestra.plugin.scripts.runner.docker;
 
+import java.lang.reflect.Method;
+import java.time.Duration;
+import java.util.*;
+import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+
+import org.assertj.core.api.Assertions;
+import org.hamcrest.MatcherAssert;
+import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
+
 import com.github.dockerjava.api.model.Container;
+
 import io.kestra.core.models.executions.LogEntry;
 import io.kestra.core.models.property.Property;
 import io.kestra.core.models.tasks.runners.AbstractTaskRunnerTest;
@@ -13,26 +26,15 @@ import io.kestra.core.utils.Await;
 import io.kestra.core.utils.IdUtils;
 import io.kestra.core.utils.TestsUtils;
 import io.kestra.plugin.scripts.exec.scripts.runners.CommandsWrapper;
+
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
-import org.assertj.core.api.Assertions;
-import org.hamcrest.MatcherAssert;
-import org.junit.jupiter.api.Test;
 import reactor.core.publisher.Flux;
-import java.lang.reflect.Method;
-import java.time.Duration;
-import java.util.*;
-import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-import org.mockito.Mockito;
 
 import static io.kestra.core.utils.Rethrow.throwRunnable;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.is;
-
-
 
 class DockerTest extends AbstractTaskRunnerTest {
     @Inject
@@ -53,10 +55,14 @@ class DockerTest extends AbstractTaskRunnerTest {
             .pullPolicy(Property.ofValue(PullPolicy.ALWAYS))
             .build();
 
-        var taskCommands = new CommandsWrapper(runContext).withCommands(Property.ofValue(List.of(
-            "/bin/sh", "-c",
-            "echo Hello World!"
-        )));
+        var taskCommands = new CommandsWrapper(runContext).withCommands(
+            Property.ofValue(
+                List.of(
+                    "/bin/sh", "-c",
+                    "echo Hello World!"
+                )
+            )
+        );
         var result = docker.run(runContext, taskCommands, Collections.emptyList());
 
         assertThat(result).isNotNull();
@@ -77,11 +83,15 @@ class DockerTest extends AbstractTaskRunnerTest {
             .cpu(cpuConfig)
             .build();
 
-        var taskCommands = new CommandsWrapper(runContext).withCommands(Property.ofValue(List.of(
-                "/bin/sh", "-c",
-                "CPU_LIMIT=$(cat /sys/fs/cgroup/cpu.max || cat /sys/fs/cgroup/cpu/cpu.cfs_quota_us) && " +
-                    "echo \"::{\\\"outputs\\\":{\\\"cpuLimit\\\":\\\"$CPU_LIMIT\\\"}}::\""
-            )));
+        var taskCommands = new CommandsWrapper(runContext).withCommands(
+            Property.ofValue(
+                List.of(
+                    "/bin/sh", "-c",
+                    "CPU_LIMIT=$(cat /sys/fs/cgroup/cpu.max || cat /sys/fs/cgroup/cpu/cpu.cfs_quota_us) && " +
+                        "echo \"::{\\\"outputs\\\":{\\\"cpuLimit\\\":\\\"$CPU_LIMIT\\\"}}::\""
+                )
+            )
+        );
         var result = docker.run(runContext, taskCommands, Collections.emptyList());
 
         assertThat(result).isNotNull();
@@ -104,17 +114,19 @@ class DockerTest extends AbstractTaskRunnerTest {
         var runContext = runContext(this.runContextFactory, null, taskRunId);
         var commands = initScriptCommands(runContext);
 
-
         // Setup log queue consumer
         List<LogEntry> logs = new CopyOnWriteArrayList<>();
-        Flux<LogEntry> receive = TestsUtils.receive(workerTaskLogQueue, (logEntry) -> {
+        Flux<LogEntry> receive = TestsUtils.receive(workerTaskLogQueue, (logEntry) ->
+        {
             if (logEntry.isLeft()) {
                 logs.add(logEntry.getLeft());
             }
         });
 
-        var commandsList = ScriptService.scriptCommands(List.of("/bin/sh", "-c"), Collections.emptyList(),
-            List.of("echo 'sleeping for 50 seconds' && sleep 50"));
+        var commandsList = ScriptService.scriptCommands(
+            List.of("/bin/sh", "-c"), Collections.emptyList(),
+            List.of("echo 'sleeping for 50 seconds' && sleep 50")
+        );
         Mockito.when(commands.getCommands()).thenReturn(Property.ofValue(commandsList));
 
         var taskRunner = ((Docker) taskRunner())
@@ -133,7 +145,8 @@ class DockerTest extends AbstractTaskRunnerTest {
 
             var timeout = Duration.ofSeconds(30);
             // Wait for the container to be created
-            Await.until(() -> {
+            Await.until(() ->
+            {
                 List<Container> existingContainers = client.listContainersCmd()
                     .withShowAll(true)
                     .withLabelFilter(labels)
@@ -141,7 +154,8 @@ class DockerTest extends AbstractTaskRunnerTest {
                 return !existingContainers.isEmpty() && existingContainers.get(0).getState().equals("running");
             }, Duration.ofMillis(100), timeout); // Add timeout to avoid waiting forever for container to be created
 
-            callOnKill(taskRunner, () -> {
+            callOnKill(taskRunner, () ->
+            {
                 // override the kill method to not kill the container
             });
             initialContainerThread.interrupt();
@@ -179,8 +193,7 @@ class DockerTest extends AbstractTaskRunnerTest {
 
             String createContainerId = null;
             String resumeContainerId = null;
-            Matcher createContainerMatcher =
-                Pattern.compile("Container created: ([\\w]+)").matcher(createContainerLog.getMessage());
+            Matcher createContainerMatcher = Pattern.compile("Container created: ([\\w]+)").matcher(createContainerLog.getMessage());
             if (createContainerMatcher.find()) {
                 createContainerId = createContainerMatcher.group(1);
             }
@@ -188,8 +201,7 @@ class DockerTest extends AbstractTaskRunnerTest {
             assertThat(createContainerId)
                 .withFailMessage("Could not extract container id from create container log: %s", createContainerLog.getMessage())
                 .isNotNull();
-            Matcher resumeContainerMatcher =
-                Pattern.compile("Resuming existing container: ([\\w]+)").matcher(awaitLog.getMessage());
+            Matcher resumeContainerMatcher = Pattern.compile("Resuming existing container: ([\\w]+)").matcher(awaitLog.getMessage());
             if (resumeContainerMatcher.find()) {
                 resumeContainerId = resumeContainerMatcher.group(1);
             }
@@ -216,17 +228,19 @@ class DockerTest extends AbstractTaskRunnerTest {
         var runContext = runContext(this.runContextFactory, null, taskRunId);
         var commands = initScriptCommands(runContext);
 
-
         // Setup log queue consumer
         List<LogEntry> logs = new CopyOnWriteArrayList<>();
-        Flux<LogEntry> receive = TestsUtils.receive(workerTaskLogQueue, (logEntry) -> {
+        Flux<LogEntry> receive = TestsUtils.receive(workerTaskLogQueue, (logEntry) ->
+        {
             if (logEntry.isLeft()) {
                 logs.add(logEntry.getLeft());
             }
         });
 
-        var commandsList = ScriptService.scriptCommands(List.of("/bin/sh", "-c"), Collections.emptyList(),
-            List.of("echo 'sleeping for 50 seconds' && sleep 50"));
+        var commandsList = ScriptService.scriptCommands(
+            List.of("/bin/sh", "-c"), Collections.emptyList(),
+            List.of("echo 'sleeping for 50 seconds' && sleep 50")
+        );
         Mockito.when(commands.getCommands()).thenReturn(Property.ofValue(commandsList));
 
         var taskRunner = ((Docker) taskRunner())
@@ -245,7 +259,8 @@ class DockerTest extends AbstractTaskRunnerTest {
 
             var timeout = Duration.ofSeconds(30);
             // Wait for the container to be created
-            Await.until(() -> {
+            Await.until(() ->
+            {
                 List<Container> existingContainers = client.listContainersCmd()
                     .withShowAll(true)
                     .withLabelFilter(labels)
@@ -258,7 +273,8 @@ class DockerTest extends AbstractTaskRunnerTest {
                 logEntry -> logEntry.getMessage().contains("Container created:")
             );
 
-            callOnKill(taskRunner, () -> {
+            callOnKill(taskRunner, () ->
+            {
                 // override the kill method to not kill the container
             });
             initialContainerThread.interrupt();
@@ -296,8 +312,7 @@ class DockerTest extends AbstractTaskRunnerTest {
 
             String createContainerId = null;
             String resumeContainerId = null;
-            Matcher createContainerMatcher =
-                Pattern.compile("Container created: ([\\w]+)").matcher(createContainerLog.getMessage());
+            Matcher createContainerMatcher = Pattern.compile("Container created: ([\\w]+)").matcher(createContainerLog.getMessage());
             if (createContainerMatcher.find()) {
                 createContainerId = createContainerMatcher.group(1);
             }
@@ -305,8 +320,7 @@ class DockerTest extends AbstractTaskRunnerTest {
             assertThat(createContainerId)
                 .withFailMessage("Could not extract container id from create container log: %s", createContainerLog.getMessage())
                 .isNotNull();
-            Matcher resumeContainerMatcher =
-                Pattern.compile("Resuming existing container: ([\\w]+)").matcher(awaitLog.getMessage());
+            Matcher resumeContainerMatcher = Pattern.compile("Resuming existing container: ([\\w]+)").matcher(awaitLog.getMessage());
             if (resumeContainerMatcher.find()) {
                 resumeContainerId = resumeContainerMatcher.group(1);
             }
