@@ -1,5 +1,14 @@
 package io.kestra.webserver.controllers.api;
 
+import java.time.Duration;
+import java.time.ZonedDateTime;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.concurrent.TimeoutException;
+
+import org.junit.jupiter.api.Test;
+
 import io.kestra.core.junit.annotations.KestraTest;
 import io.kestra.core.models.QueryFilter;
 import io.kestra.core.models.flows.Flow;
@@ -21,6 +30,7 @@ import io.kestra.webserver.controllers.api.TriggerController.SetDisabledRequest;
 import io.kestra.webserver.responses.BulkResponse;
 import io.kestra.webserver.responses.PagedResults;
 import io.kestra.webserver.tenants.TenantValidationFilter;
+
 import io.micronaut.core.type.Argument;
 import io.micronaut.data.model.Pageable;
 import io.micronaut.http.HttpRequest;
@@ -31,14 +41,6 @@ import io.micronaut.http.client.exceptions.HttpClientResponseException;
 import io.micronaut.reactor.http.client.ReactorHttpClient;
 import io.micronaut.test.annotation.MockBean;
 import jakarta.inject.Inject;
-import org.junit.jupiter.api.Test;
-
-import java.time.Duration;
-import java.time.ZonedDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.concurrent.TimeoutException;
 
 import static io.kestra.core.tenant.TenantService.MAIN_TENANT;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -62,14 +64,15 @@ class TriggerControllerTest {
     AbstractJdbcTriggerRepository jdbcTriggerRepository;
 
     @MockBean(TenantService.class)
-    public TenantService getTenantService(){
+    public TenantService getTenantService() {
         return mock(TenantService.class);
     }
+
     @Inject
     private TenantService tenantService;
 
     @MockBean(TenantValidationFilter.class)
-    public TenantValidationFilter getTenantValidationFilter(){
+    public TenantValidationFilter getTenantValidationFilter() {
         return mock(TenantValidationFilter.class);
     }
 
@@ -96,8 +99,10 @@ class TriggerControllerTest {
         jdbcTriggerRepository.save(trigger.toBuilder().triggerId("trigger-nextexec-polling").build());
 
         PagedResults<TriggerController.Triggers> triggers = client.toBlocking().retrieve(
-            HttpRequest.GET(TRIGGER_PATH.formatted(tenant)
-                + "/search?filters[q][EQUALS]=schedule-trigger-search&filters[namespace][STARTS_WITH]=io.kestra.tests&sort=triggerId:asc"),
+            HttpRequest.GET(
+                TRIGGER_PATH.formatted(tenant)
+                    + "/search?filters[q][EQUALS]=schedule-trigger-search&filters[namespace][STARTS_WITH]=io.kestra.tests&sort=triggerId:asc"
+            ),
             Argument.of(PagedResults.class, TriggerController.Triggers.class)
         );
         assertThat(triggers.getTotal()).isGreaterThanOrEqualTo(2L);
@@ -113,8 +118,10 @@ class TriggerControllerTest {
                 tuple("trigger-nextexec-polling", triggerNamespace, triggerFlowId)
             );
         PagedResults<TriggerController.Triggers> triggers_oldParameters = client.toBlocking().retrieve(
-            HttpRequest.GET(TRIGGER_PATH.formatted(tenant)
-                + "/search?q=schedule-trigger-search&namespace=io.kestra.tests&sort=triggerId:asc"),
+            HttpRequest.GET(
+                TRIGGER_PATH.formatted(tenant)
+                    + "/search?q=schedule-trigger-search&namespace=io.kestra.tests&sort=triggerId:asc"
+            ),
             Argument.of(PagedResults.class, TriggerController.Triggers.class)
         );
         assertThat(triggers_oldParameters.getTotal()).isGreaterThanOrEqualTo(2L);
@@ -145,11 +152,15 @@ class TriggerControllerTest {
 
         jdbcTriggerRepository.save(trigger);
 
-        trigger = client.toBlocking().retrieve(HttpRequest.POST((TRIGGER_PATH.formatted(tenant) + "/%s/%s/%s/unlock").formatted(
-            trigger.getNamespace(),
-            trigger.getFlowId(),
-            trigger.getTriggerId()
-        ), null), Trigger.class);
+        trigger = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                (TRIGGER_PATH.formatted(tenant) + "/%s/%s/%s/unlock").formatted(
+                    trigger.getNamespace(),
+                    trigger.getFlowId(),
+                    trigger.getTriggerId()
+                ), null
+            ), Trigger.class
+        );
 
         assertThat(trigger.getExecutionId()).isNull();
         assertThat(trigger.getEvaluateRunningDate()).isNull();
@@ -159,22 +170,31 @@ class TriggerControllerTest {
         assertThat(unlockedTrigger.getExecutionId()).isNull();
         assertThat(unlockedTrigger.getEvaluateRunningDate()).isNull();
 
-        HttpClientResponseException e = assertThrows(HttpClientResponseException.class, () ->
-            client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH.formatted(tenant) + "/%s/%s/%s/unlock").formatted(
-                unlockedTrigger.getNamespace(),
-                unlockedTrigger.getFlowId(),
-                unlockedTrigger.getTriggerId()
-            ), null)));
+        HttpClientResponseException e = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().exchange(
+                HttpRequest.POST(
+                    (TRIGGER_PATH.formatted(tenant) + "/%s/%s/%s/unlock").formatted(
+                        unlockedTrigger.getNamespace(),
+                        unlockedTrigger.getFlowId(),
+                        unlockedTrigger.getTriggerId()
+                    ), null
+                )
+            )
+        );
 
         assertThat(e.getStatus().getCode()).isEqualTo(HttpStatus.CONFLICT.getCode());
         assertThat(e.getMessage()).isEqualTo("Illegal state: Trigger is not locked");
 
-        e = assertThrows(HttpClientResponseException.class, () ->
-            client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH.formatted(tenant) + "/%s/%s/%s/unlock").formatted(
-                "bad.namespace",
-                "some-flow-id",
-                "some-trigger-id"
-            ), null))
+        e = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().exchange(
+                HttpRequest.POST(
+                    (TRIGGER_PATH.formatted(tenant) + "/%s/%s/%s/unlock").formatted(
+                        "bad.namespace",
+                        "some-flow-id",
+                        "some-trigger-id"
+                    ), null
+                )
+            )
         );
 
         assertThat(e.getStatus().getCode()).isEqualTo(HttpStatus.NOT_FOUND.getCode());
@@ -231,12 +251,16 @@ class TriggerControllerTest {
 
         jdbcTriggerRepository.create(trigger);
 
-        HttpResponse<?> restarted = client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH.formatted(tenant)
-            + "/io.kestra.tests.schedule/flow-with-triggers/trigger-to-restart/restart"), null));
+        HttpResponse<?> restarted = client.toBlocking().exchange(
+            HttpRequest.POST(
+                (TRIGGER_PATH.formatted(tenant)
+                    + "/io.kestra.tests.schedule/flow-with-triggers/trigger-to-restart/restart"),
+                null
+            )
+        );
         assertThat(restarted.getStatus().getCode()).isEqualTo(HttpStatus.OK.getCode());
 
-        assertThrows(HttpClientResponseException.class, () -> client.toBlocking().exchange(HttpRequest.POST((
-            TRIGGER_PATH.formatted(tenant) + "/notfound/notfound/notfound/restart"), null)));
+        assertThrows(HttpClientResponseException.class, () -> client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH.formatted(tenant) + "/notfound/notfound/notfound/restart"), null)));
     }
 
     @Test
@@ -263,8 +287,11 @@ class TriggerControllerTest {
 
         List<Trigger> triggers = List.of(triggerLock, triggerNotLock);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/unlock/by-triggers", triggers), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH.formatted(tenant) + "/unlock/by-triggers", triggers
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(1);
     }
@@ -292,8 +319,11 @@ class TriggerControllerTest {
         jdbcTriggerRepository.save(triggerLock);
         jdbcTriggerRepository.save(triggerNotLock);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/unlock/by-query?namespace=" + namespace, null), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH.formatted(tenant) + "/unlock/by-query?namespace=" + namespace, null
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(1);
     }
@@ -317,8 +347,11 @@ class TriggerControllerTest {
 
         List<Trigger> triggers = List.of(triggerDisabled, triggerNotDisabled);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, false)), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, false)
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(2);
         assertThat(jdbcTriggerRepository.findLast(triggerDisabled).get().getDisabled()).isFalse();
@@ -341,8 +374,11 @@ class TriggerControllerTest {
         jdbcTriggerRepository.save(triggerDisabled);
         jdbcTriggerRepository.save(triggerNotDisabled);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-query?namespace=%s&disabled=false".formatted(namespace), null), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-query?namespace=%s&disabled=false".formatted(namespace), null
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(2);
         assertThat(jdbcTriggerRepository.findLast(triggerDisabled).get().getDisabled()).isFalse();
@@ -367,8 +403,11 @@ class TriggerControllerTest {
 
         List<Trigger> triggers = List.of(triggerDisabled, triggerNotDisabled);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, true)), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, true)
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(2);
         assertThat(jdbcTriggerRepository.findLast(triggerNotDisabled).get().getDisabled()).isTrue();
@@ -379,10 +418,13 @@ class TriggerControllerTest {
         String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
         when(tenantService.resolveTenant()).thenReturn(tenant);
         HttpClientResponseException e = assertThrows(
-            HttpClientResponseException.class, () -> client.toBlocking().retrieve(HttpRequest.POST(
-                    TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-triggers", new SetDisabledRequest(null, null)),
-                BulkResponse.class));
-
+            HttpClientResponseException.class, () -> client.toBlocking().retrieve(
+                HttpRequest.POST(
+                    TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-triggers", new SetDisabledRequest(null, null)
+                ),
+                BulkResponse.class
+            )
+        );
 
         assertThat(e.getStatus().getCode()).isEqualTo(HttpStatus.UNPROCESSABLE_ENTITY.getCode());
     }
@@ -404,8 +446,11 @@ class TriggerControllerTest {
         jdbcTriggerRepository.save(triggerDisabled);
         jdbcTriggerRepository.save(triggerNotDisabled);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-query?namespace=%s&disabled=true".formatted(namespace), null), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-query?namespace=%s&disabled=true".formatted(namespace), null
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(2);
         assertThat(jdbcTriggerRepository.findLast(triggerNotDisabled).get().getDisabled()).isTrue();
@@ -418,13 +463,19 @@ class TriggerControllerTest {
         Flow flow = generateFlow(tenant, "flow-with-triggers");
         jdbcFlowRepository.create(GenericFlow.of(flow));
         Await.until(
-            () -> client.toBlocking().retrieve(HttpRequest.GET(
-                TRIGGER_PATH.formatted(tenant) + "/search?filters[q][EQUALS]=trigger-nextexec"), Argument.of(PagedResults.class, Trigger.class)).getTotal() >= 2,
+            () -> client.toBlocking().retrieve(
+                HttpRequest.GET(
+                    TRIGGER_PATH.formatted(tenant) + "/search?filters[q][EQUALS]=trigger-nextexec"
+                ), Argument.of(PagedResults.class, Trigger.class)
+            ).getTotal() >= 2,
             Duration.ofMillis(100),
             Duration.ofSeconds(20)
         );
-        PagedResults<TriggerController.Triggers> triggers = client.toBlocking().retrieve(HttpRequest.GET(
-            TRIGGER_PATH.formatted(tenant) + "/search?filters[q][EQUALS]=trigger-nextexec"), Argument.of(PagedResults.class, TriggerController.Triggers.class));
+        PagedResults<TriggerController.Triggers> triggers = client.toBlocking().retrieve(
+            HttpRequest.GET(
+                TRIGGER_PATH.formatted(tenant) + "/search?filters[q][EQUALS]=trigger-nextexec"
+            ), Argument.of(PagedResults.class, TriggerController.Triggers.class)
+        );
         assertThat(triggers.getResults().getFirst().getTriggerContext().getNextExecutionDate()).isNotNull();
         assertThat(triggers.getResults().get(1).getTriggerContext().getNextExecutionDate()).isNotNull();
     }
@@ -434,22 +485,28 @@ class TriggerControllerTest {
             .id(flowId)
             .namespace("io.kestra.tests.schedule")
             .tenantId(tenant)
-            .tasks(Collections.singletonList(Return.builder()
-                .id("task")
-                .type(Return.class.getName())
-                .format(Property.ofValue("return data"))
-                .build()))
-            .triggers(List.of(
-                Schedule.builder()
-                    .id("trigger-nextexec-schedule")
-                    .type(Schedule.class.getName())
-                    .cron("*/1 * * * *")
-                    .build(),
-                PollingTrigger.builder()
-                    .id("trigger-nextexec-polling")
-                    .type(PollingTrigger.class.getName())
-                    .build()
-            ))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("task")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("return data"))
+                        .build()
+                )
+            )
+            .triggers(
+                List.of(
+                    Schedule.builder()
+                        .id("trigger-nextexec-schedule")
+                        .type(Schedule.class.getName())
+                        .cron("*/1 * * * *")
+                        .build(),
+                    PollingTrigger.builder()
+                        .id("trigger-nextexec-polling")
+                        .type(PollingTrigger.class.getName())
+                        .build()
+                )
+            )
             .build();
     }
 
@@ -458,20 +515,26 @@ class TriggerControllerTest {
             .id(IdUtils.create())
             .tenantId(tenant)
             .namespace(namespace)
-            .tasks(Collections.singletonList(Return.builder()
-                .id("task")
-                .type(Return.class.getName())
-                .format(Property.ofValue("return data"))
-                .build()))
-            .triggers(List.of(Schedule.builder()
-                .id(IdUtils.create())
-                .type(Schedule.class.getName())
-                .cron("*/1 * * * *")
-                .build()
-            ))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("task")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("return data"))
+                        .build()
+                )
+            )
+            .triggers(
+                List.of(
+                    Schedule.builder()
+                        .id(IdUtils.create())
+                        .type(Schedule.class.getName())
+                        .cron("*/1 * * * *")
+                        .build()
+                )
+            )
             .build();
     }
-
 
     private static Trigger createTriggerFromFlow(Flow flow1, Boolean disabled) {
         return Trigger.builder()
@@ -551,7 +614,10 @@ class TriggerControllerTest {
 
         HttpResponse<BulkResponse> firstDeleteResponse = client.toBlocking()
             .exchange(
-                HttpRequest.DELETE(TRIGGER_PATH.formatted(tenant) + "/delete/by-query?filters[namespace][EQUALS]=" + flow.getNamespace() + "&filters[flowId][EQUALS]=" + flow.getId() + "&filters[triggerId][EQUALS]=delete-test-trigger"),
+                HttpRequest.DELETE(
+                    TRIGGER_PATH.formatted(tenant) + "/delete/by-query?filters[namespace][EQUALS]=" + flow.getNamespace() + "&filters[flowId][EQUALS]=" + flow.getId()
+                        + "&filters[triggerId][EQUALS]=delete-test-trigger"
+                ),
                 BulkResponse.class
             );
 
@@ -573,10 +639,12 @@ class TriggerControllerTest {
         List<Trigger> finalRemaining = jdbcTriggerRepository.find(Pageable.UNPAGED, tenant, filtersForFlow(flow));
         assertThat(finalRemaining.size()).isEqualTo(0);
 
-        Optional<Trigger> deletedTrigger = jdbcTriggerRepository.findLast(TriggerContext.builder()
-            .namespace(flow.getNamespace())
-            .flowId(flow.getId())
-            .triggerId("delete-test-trigger").build());
+        Optional<Trigger> deletedTrigger = jdbcTriggerRepository.findLast(
+            TriggerContext.builder()
+                .namespace(flow.getNamespace())
+                .flowId(flow.getId())
+                .triggerId("delete-test-trigger").build()
+        );
 
         assertThat(deletedTrigger.isPresent()).isFalse();
     }
@@ -621,10 +689,12 @@ class TriggerControllerTest {
 
         assertThat(response.getStatus().getCode()).isEqualTo(HttpStatus.NO_CONTENT.getCode());
 
-        Optional<Trigger> deletedTrigger = jdbcTriggerRepository.findLast(TriggerContext.builder()
-            .namespace(flow.getNamespace())
-            .flowId(flow.getId())
-            .triggerId(triggerId).build());
+        Optional<Trigger> deletedTrigger = jdbcTriggerRepository.findLast(
+            TriggerContext.builder()
+                .namespace(flow.getNamespace())
+                .flowId(flow.getId())
+                .triggerId(triggerId).build()
+        );
 
         assertThat(deletedTrigger.isPresent()).isFalse();
     }
@@ -639,7 +709,6 @@ class TriggerControllerTest {
         jdbcTriggerRepository.save(t1);
         jdbcTriggerRepository.save(t2);
         jdbcFlowRepository.create(GenericFlow.of(createFlowWithTrigger(t1)));
-
 
         HttpResponse<byte[]> response = client.toBlocking().exchange(
             HttpRequest.GET(TRIGGER_PATH.formatted(tenant) + "/export/by-query/csv"),
@@ -665,7 +734,7 @@ class TriggerControllerTest {
             .build();
     }
 
-    private static Trigger createTrigger(String tenant, String triggerId, String flowId){
+    private static Trigger createTrigger(String tenant, String triggerId, String flowId) {
         return Trigger.builder()
             .triggerId(triggerId)
             .flowId(flowId)
